@@ -15,6 +15,9 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+04 October 2014 Vladimir Ivanchenko  (hadr-mod-util-V10-00-15)
+- G4Fragment - added model type
+
 06 August 2014 Gunter Folger     (hadr-mod-util-V10-00-14)
 - G4Fancy3DNucleus: remove thread local alloc in ChoosePositions().
     Tool for Mt conversion probably confused by a static, creating a small leak.
